--- a/homework/homework_3.2.html
+++ b/homework/homework_3.2.html
@@ -17,7 +17,7 @@
     <p class="lead"> Slav Gagarov</p>
     <form id="orderOptions">
         <div class="form-group">
-            <label for="Email Input"></label>
+            <label for="EmailInput"></label>
             <input type="email" id="name" class="form-control" placeholder="Enter your name"><br>
         </div>
         <div class="form-check">
@@ -27,7 +27,7 @@
         </div>
         <br>
         <div class="form-group">
-            <label for="options of food">Food Type</label>
+            <label for="optionsOfFood">Food Type</label>
             <select  class="form-control" id="choices">
                <option value="Pizza">Pizza</option>
                <option value="Thai">Thai</option>
