--- a/homework/homework_3.2.html
+++ b/homework/homework_3.2.html
@@ -17,17 +17,22 @@
     <p class="lead"> Slav Gagarov</p>
     <form id="orderOptions">
         <div class="form-group">
-            <label for="EmailInput"></label>
-            <input type="email" id="name" class="form-control" placeholder="Enter your name"><br>
+            <label for="emailInput"></label>
+            <input type="email" id="emailInput" class="form-control" placeholder="Enter your name"><br>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="foodType" id="button1" value="EatIn" checked> Eat In<br>
-            <input class="form-check-input" type="radio" name="foodType" id="button2" value="CarryOut" checked> Carry Out<br>
-            <input class="form-check-input" type="radio" name="foodType" id="button3" value="Delivery" checked> Delivery<br>
+            <input class="form-check-input" type="radio" name="foodType" id="button1" value="EatIn" checked>
+            <label class="form-check-label" for="button1"> Eat In</label><br>
+        </div><div class="form-check">
+            <input class="form-check-input" type="radio" name="foodType" id="button2" value="CarryOut" checked>
+        <label class="form-check-label" for="button2"></label>Carry Out<br>
+        </div><div class="form-check">
+            <input class="form-check-input" type="radio" name="foodType" id="button3" value="Delivery" checked>
+        <label class="form-check-label" for="button3"></label>Delivery<br>
         </div>
         <br>
         <div class="form-group">
-            <label for="optionsOfFood">Food Type</label>
+            <label for="choices">Food Type</label>
             <select  class="form-control" id="choices">
                <option value="Pizza">Pizza</option>
                <option value="Thai">Thai</option>
